# GAN

./: .gitignore  models.py  requirements.txt  train.py  utils.py
DCGAN/: README.md  config.yaml  config_anime.yaml  config_celebrity.yaml  dataset.py  dataset_anime.py  dataset_celebrity.py  experiments.md  models.py  pyproject.toml  requirements.txt  setup.sh  train.py  train_ddp.py
dcgan/: .gitignore  README.md  config_anime.yaml  config_celebrity.yaml  dataset_celebrity.py  dataset_celebrity.py.bak  experiments.md  plot_wandb_local.py  pyproject.toml  run_ddp.sh  train.py
dcgan/logs_celebrity/tensorboard/: events.out.tfevents.1754448894.0c190cb7-01.cloud.together.ai.2997841.0  events.out.tfevents.1754449140.0c190cb7-01.cloud.together.ai.3009560.0  events.out.tfevents.1754449559.0c190cb7-01.cloud.together.ai.3024299.0  events.out.tfevents.1754450697.0c190cb7-08.cloud.together.ai.2589504.0  events.out.tfevents.1754450825.0c190cb7-08.cloud.together.ai.2591877.0  events.out.tfevents.1754451501.0c190cb7-08.cloud.together.ai.2603754.0  events.out.tfevents.1754452115.0c190cb7-08.cloud.together.ai.2611005.0  events.out.tfevents.1754452520.0c190cb7-08.cloud.together.ai.2614219.0  events.out.tfevents.1754460922.0c190cb7-08.cloud.together.ai.2646219.0  events.out.tfevents.1754462651.0c190cb7-08.cloud.together.ai.2659755.0  events.out.tfevents.1754462924.0c190cb7-08.cloud.together.ai.2662843.0  (+19 more)
dcgan/src/: ddp_utils.py  evaluation.py  models.py  train_ddp.py  training_utils.py  utils.py  wandb_logging.py
dcgan/src/datasets/: README.md  __init__.py  (+4 more)
dcgan/wandb/: latest-run
(+2 files in other folders)
